--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,10 @@
-<p>recipe-item works!</p>
+<a [routerLink]="['/recipes', recipeData.id]" class="d-flex flex-row align-items-center p-3"
+    style="text-decoration: none; color: #000;">
+    <div class="">{{ recipeIndex }}
+        <h4 class=" list-group-item-heading">{{ recipeData.name }}</h4>
+        <span class="list-group-item-text">{{ recipeData.description }}</span>
+    </div>
+    <span class="ms-auto">
+        <img src="{{ recipeData.imagePath }}" alt="" class="img-responsive" style="max-height: 50px;">
+    </span>
+</a>
