--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,17 @@
-<app-recipe-item></app-recipe-item>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success mt-3">New Recipe</button>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="list-group">
+            <app-recipe-item class="list-group-item list-group-item-action"
+                *ngFor="let recipe of recipes; let i = index" [recipeData]="recipe" [recipeIndex]="index"
+                id="{{recipe.id}}">
+            </app-recipe-item>
+        </div>
+
+    </div>
+</div>
