--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,32 @@
-<div class="row text-center">
-    <div class="col">
-        <nav class="nav">
-            <a href="#" class="nav-link">Shopping List</a>
-            <a href="#" class="nav-link">Recipe List</a>
-        </nav>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a href="" class="navbar-brand">Recipe Book</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex">
+                <li class="nav-item"><a href="#" class="nav-link" routerLink="/recipes" routerLinkActive="active"
+                        [routerLinkActiveOptions]="{exact: true}">Recipe
+                        List</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" routerLink="/shopping-list" routerLinkActive="active"
+                        [routerLinkActiveOptions]="{exact: true}">Shopping List</a>
+                </li>
+
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown" appDropdown>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu" style="right: 0;">
+                        <li><a class="dropdown-item" href="">Save Data</a></li>
+                        <li><a class="dropdown-item" href="">Fetch Data</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+</nav>
