--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,29 @@
-<p>shopping-edit works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name">Name</label>
+                    <!-- <input type="text" id="name" name="name" class="form-control"> -->
+                    <input type="text" id="name" name="name" class="form-control" #ingredientName>
+
+                </div>
+                <div class="col-sm-2 form-group">
+                    <label for="amount">Amount</label>
+                    <!-- <input type="number" id="amount" name="amount" class="form-control"> -->
+                    <input type="number" id="amount" name="amount" class="form-control" #ingredientAmount>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button class="btn btn-success me-2 mt-2" type="submit" (click)="onAddIngredient()">Add</button>
+                    <!-- <button class="btn btn-success me-2 mt-2" type="submit">Add</button> -->
+                    <button class="btn btn-danger me-2 mt-2" type="button"
+                        (click)="onDeleteIngredient()">Delete</button>
+                    <button class="btn btn-primary me-2 mt-2" type="button"
+                        (click)="clearIngredientFields()">Clear</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
