--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,14 @@
 <div class="row">
     <div class="col-xs-10">
+        <!-- <app-shopping-edit (ingredientAdded)="newIngredientAdded($event)" (deleteRequested)="removeIngredient()">
+        </app-shopping-edit> -->
         <app-shopping-edit></app-shopping-edit>
         <hr>
-        <p>The list</p>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-action d-flex" *ngFor="let ingredient of ingredients2">
+                <a style="cursor: pointer;">{{ingredient.name}} ({{ingredient.amount}}<span
+                        *ngIf="ingredient.unit !== ''" class="ms-1">{{ingredient.unit}}</span>)</a>
+            </li>
+        </ul>
     </div>
 </div>
