Section 12 & Section 14 plus TD Forms

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,9 +3,10 @@
     height: 60px
 }
 
-.navbar a {
-    padding: 18px;
+.navbar a.nav-link {
+    padding: 18px !important;
 }
+
 
 .active {
     background-color: rgba(0, 0, 0, .075);
