--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,8 @@
-<div class="row">
+<div class="row gx-5">
     <div class="col-md-5">
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail [recipeDetails]="recipeData"></app-recipe-detail>
         <router-outlet></router-outlet>
     </div>
 </div>
