--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light mb-4">
     <div class="container-fluid">
         <a href="" class="navbar-brand">Recipe Book</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -7,10 +7,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex">
-                <li class="nav-item"><a href="#" class="nav-link" routerLink="/recipes" routerLinkActive="active"
-                        [routerLinkActiveOptions]="{exact: true}">Recipe
+                <li class="nav-item"><a class="nav-link" routerLink="/recipes" routerLinkActive="active">Recipe
                         List</a></li>
-                <li class="nav-item"><a href="#" class="nav-link" routerLink="/shopping-list" routerLinkActive="active"
+                <li class="nav-item"><a class="nav-link" routerLink="/shopping-list" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact: true}">Shopping List</a>
                 </li>
 
@@ -22,8 +21,8 @@
                         Dropdown
                     </a>
                     <ul class="dropdown-menu" style="right: 0;">
-                        <li><a class="dropdown-item" href="">Save Data</a></li>
-                        <li><a class="dropdown-item" href="">Fetch Data</a></li>
+                        <li><a class="dropdown-item">Save Data</a></li>
+                        <li><a class="dropdown-item">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
