--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,22 +1,22 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
-                    <label for="name">Name</label>
+                    <label for="ingredientName" class="form-label">Name</label>
                     <!-- <input type="text" id="name" name="name" class="form-control"> -->
-                    <input type="text" id="name" name="name" class="form-control" #ingredientName>
+                    <input type="text" id="ingredientName" name="name" class="form-control" ngModel>
 
                 </div>
                 <div class="col-sm-2 form-group">
-                    <label for="amount">Amount</label>
+                    <label for="amount" class="form-label">Amount</label>
                     <!-- <input type="number" id="amount" name="amount" class="form-control"> -->
-                    <input type="number" id="amount" name="amount" class="form-control" #ingredientAmount>
+                    <input type="number" id="amount" name="amount" class="form-control" ngModel>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success me-2 mt-2" type="submit" (click)="onAddIngredient()">Add</button>
+                    <button class="btn btn-success me-2 mt-2" type="submit">Add</button>
                     <!-- <button class="btn btn-success me-2 mt-2" type="submit">Add</button> -->
                     <button class="btn btn-danger me-2 mt-2" type="button"
                         (click)="onDeleteIngredient()">Delete</button>
