--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -5,21 +5,24 @@
                 <div class="col-sm-5 form-group">
                     <label for="ingredientName" class="form-label">Name</label>
                     <!-- <input type="text" id="name" name="name" class="form-control"> -->
-                    <input type="text" id="ingredientName" name="name" class="form-control" ngModel>
+                    <input type="text" id="ingredientName" name="name" class="form-control" required ngModel>
 
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount" class="form-label">Amount</label>
                     <!-- <input type="number" id="amount" name="amount" class="form-control"> -->
-                    <input type="number" id="amount" name="amount" class="form-control" ngModel>
+                    <input type="number" id="amount" name="amount" class="form-control" required number
+                        pattern="^[1-9]+[0-9]*$" ngModel>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success me-2 mt-2" type="submit">Add</button>
+                    <button class="btn btn-success me-2 mt-2" [disabled]="!f.valid" type="submit">{{editMode ? "Update"
+                        : "Add"}}</button>
+
                     <!-- <button class="btn btn-success me-2 mt-2" type="submit">Add</button> -->
-                    <button class="btn btn-danger me-2 mt-2" type="button"
-                        (click)="onDeleteIngredient()">Delete</button>
+                    <button class="btn btn-danger me-2 mt-2" type="button" (click)="onDeleteIngredient()"
+                        *ngIf="editMode">Delete</button>
                     <button class="btn btn-primary me-2 mt-2" type="button"
                         (click)="clearIngredientFields()">Clear</button>
                 </div>
