--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,9 +5,10 @@
         <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
-            <li class="list-group-item list-group-item-action d-flex" *ngFor="let ingredient of ingredients">
-                <a style="cursor: pointer;">{{ingredient.name}} ({{ingredient.amount}}<span
-                        *ngIf="ingredient.unit !== ''" class="ms-1">{{ingredient.unit}}</span>)</a>
+            <li class="list-group-item list-group-item-action d-flex" style="cursor: pointer;" (click)="onEditItem(i)"
+                [ngClass]="activeItem === i ? 'active' : '' " *ngFor="let ingredient of ingredients; let i = index">
+                <a>{{ingredient.name}}
+                    ({{ingredient.amount}})</a>
             </li>
         </ul>
     </div>
